set( VGUI_CONTROLS_HEADER_FILES
	${SOURCE_SDK_ROOT}/public/Color.h
	${SOURCE_SDK_ROOT}/public/FileSystem.h
	${SOURCE_SDK_ROOT}/public/filesystem_helpers.h
	${SOURCE_SDK_ROOT}/public/tier0/memdbgoff.h
	${SOURCE_SDK_ROOT}/public/tier0/memdbgon.h
	${SOURCE_SDK_ROOT}/public/tier1/interface.h
	${SOURCE_SDK_ROOT}/public/tier1/KeyValues.h
	${SOURCE_SDK_ROOT}/public/tier1/mempool.h
	${SOURCE_SDK_ROOT}/public/tier1/utlmemory.h
	${SOURCE_SDK_ROOT}/public/tier1/utlrbtree.h
	${SOURCE_SDK_ROOT}/public/tier1/utlvector.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/AnalogBar.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/AnimatingImagePanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/AnimationController.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/BitmapImagePanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/BuildGroup.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/BuildModeDialog.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Button.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/CheckButton.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/CheckButtonList.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/CircularProgressBar.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ComboBox.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/consoledialog.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ControllerMap.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Controls.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/CvarToggleCheckButton.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/DialogManager.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/DirectorySelectDialog.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Divider.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/EditablePanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ExpandButton.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/FileOpenDialog.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/FileOpenStateMachine.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/FocusNavGroup.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Frame.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/GraphPanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/HTML.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Image.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ImageList.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ImagePanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/InputDialog.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/KeyBindingHelpDialog.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/KeyBindingMap.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/KeyBoardEditorDialog.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/KeyRepeat.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Label.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ListPanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ListViewPanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Menu.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/MenuBar.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/MenuButton.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/MenuItem.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/MessageBox.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/MessageDialog.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/MessageMap.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Panel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/PanelAnimationVar.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/PanelListPanel.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/PerforceFileExplorer.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/PerforceFileList.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/perforcefilelistframe.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/PHandle.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ProgressBar.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ProgressBox.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/PropertyDialog.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/PropertyPage.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/PropertySheet.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/QueryBox.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/RadioButton.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/RichText.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/RotatingProgressBar.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/savedocumentquery.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/ScalableImagePanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ScrollableEditablePanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ScrollBar.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ScrollBarSlider.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/SectionedListPanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Slider.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Splitter.h
	#${SOURCE_SDK_ROOT}/public/vgui_controls/subrectimage.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/TextEntry.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/TextImage.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ToggleButton.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/Tooltip.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/ToolWindow.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/TreeView.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/TreeViewListControl.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/URLLabel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/WizardPanel.h
	${SOURCE_SDK_ROOT}/public/vgui_controls/WizardSubPanel.h
)

set( VGUI_CONTROLS_SOURCE_FILES
	${SOURCE_SDK_ROOT}/public/filesystem_helpers.cpp
	${SOURCE_SDK_ROOT}/public/vgui_controls/vgui_controls.cpp
	${SOURCE_SDK_ROOT}/vgui2/src/vgui_key_translation.cpp
	AnalogBar.cpp
	AnimatingImagePanel.cpp
	AnimationController.cpp
	BitmapImagePanel.cpp
	BuildFactoryHelper.cpp
	BuildGroup.cpp
	BuildModeDialog.cpp
	Button.cpp
	CheckButton.cpp
	CheckButtonList.cpp
	#CircularProgressBar.cpp
	ComboBox.cpp
	#consoledialog.cpp
	ControllerMap.cpp
	controls.cpp
	#CvarToggleCheckButton.cpp
	DirectorySelectDialog.cpp
	Divider.cpp
	EditablePanel.cpp
	ExpandButton.cpp
	FileOpenDialog.cpp
	#FileOpenStateMachine.cpp
	FocusNavGroup.cpp
	Frame.cpp
	GraphPanel.cpp
	HTML.cpp
	Image.cpp
	ImageList.cpp
	ImagePanel.cpp
	InputDialog.cpp
	KeyBindingHelpDialog.cpp
	KeyBoardEditorDialog.cpp
	KeyRepeat.cpp
	Label.cpp
	ListPanel.cpp
	ListViewPanel.cpp
	Menu.cpp
	MenuBar.cpp
	MenuButton.cpp
	MenuItem.cpp
	MessageBox.cpp
	MessageDialog.cpp
	Panel.cpp
	PanelListPanel.cpp
	#PerforceFileExplorer.cpp
	#PerforceFileList.cpp
	#perforcefilelistframe.cpp
	ProgressBar.cpp
	ProgressBox.cpp
	PropertyDialog.cpp
	PropertyPage.cpp
	PropertySheet.cpp
	QueryBox.cpp
	RadioButton.cpp
	RichText.cpp
	#RotatingProgressBar.cpp
	savedocumentquery.cpp
	#ScalableImagePanel.cpp
	ScrollableEditablePanel.cpp
	ScrollBar.cpp
	ScrollBarSlider.cpp
	SectionedListPanel.cpp
	Slider.cpp
	Splitter.cpp
	#subrectimage.cpp
	TextEntry.cpp
	TextImage.cpp
	ToggleButton.cpp
	Tooltip.cpp
	ToolWindow.cpp
	TreeView.cpp
	TreeViewListControl.cpp
	URLLabel.cpp
	WizardPanel.cpp
	WizardSubPanel.cpp
)

add_library( vgui_controls STATIC
	${VGUI_CONTROLS_HEADER_FILES}
	${VGUI_CONTROLS_SOURCE_FILES}
)

target_include_directories( vgui_controls PRIVATE
	${SOURCE_SDK_INCLUDE_PATHS}
)

target_compile_definitions( vgui_controls PRIVATE
	${SOURCE_SDK_DEFINES}
)

set_target_properties( vgui_controls PROPERTIES
	COMPILE_FLAGS "${SOURCE_SDK_WARNING_LEVEL}" 
)
